--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,76 @@
 {
-    "title": "Hello World!",
-    "content": "This is an internationalization example."
-  }  
+
+  "nav-a1": "PRESENTATION",
+  "nav-a2": "PROJECTS",
+
+  "toogle-button": "Change language",
+
+  "section1-p1": "Experienced developer in a wide range of technologies. From databases like SQL to programming languages such as Python, PHP, and Java, including development with Spring Boot. Additionally, I have experience in front-end tools like HTML5, CSS3, Javascript, and the Angular framework.",
+  "section1-p2": "My education includes a Degree in Early Childhood Education, a Higher Degree Cycle in Network Systems Administration, and a Programming Bootcamp. Although my professional career is in its early stages, I highlight my self-taught approach and my ability to quickly adapt to new technologies.",
+  "section1-p3": "Today, my goal is to contribute my experience to challenging projects and continue learning and improving my skills in the field of software or web development.",
+
+  "prev-item-btn": "Back",
+  "next-item-btn": "Next",
+
+  "section2-item1-h2": "SPRING BOOT & ANGULAR",
+  "section2-item1-p1": "The following two projects share similarities as they are developed in Java using Spring Boot for the backend and Angular or Thymeleaf for the frontend, offering various functionalities and enabling diverse user interactions.",
+  "section2-item1-p2": "These projects have provided the opportunity to acquire and strengthen key skills, such as:",
+  "section2-item1-p3-title": "Spring Boot and security with Spring Security.",
+  "section2-item1-p4": "When developing an application using Spring Boot, I gained experience in creating robust web applications, implementing security with Spring Security to protect resources, and manage user authentication and authorization.",
+  "section2-item1-p5-title": "Project management and data handling.",
+  "section2-item1-p6": "Through these applications, I have learned to design and develop systems for publishing projects, managing donations, adding comments, and handling interactions between users using databases and search techniques implemented with JavaScript and forms.",
+  "section2-item1-p7-title": "Frontend with Angular and Thymeleaf.",
+  "section2-item1-p8": "Using Angular or Thymeleaf in the frontend has provided opportunities to create dynamic and responsive interfaces. With Angular, I have been able to leverage tools like Angular Material and ngx-charts to display data attractively and efficiently, while Thymeleaf has allowed me to generate templates quickly and effectively for the frontend.",
+  "section2-item1-p9-title": "Data manipulation and visualization.",
+  "section2-item1-p10": "Handling data and visualizing it through graphics or tables, using tools like angular-material or ngx-charts, has expanded my knowledge in presenting information effectively and comprehensibly for users.",
+
+  "section2-item2-h2": "APPMAZING",
+  "section2-item2-p1": "Backend Repository",
+  "section2-item2-p2": "Frontend Repository",
+
+  "section2-item3-h2": "FUNDME",
+  "section2-item3-p": "Repository",
+
+  "section2-item4-h2": "PYTHON",
+  "section2-item4-p1": "The following three projects also share similarities as they are all developed with Python's Pygame library and share certain common elements in their structure and functionality.",
+  "section2-item4-p2": "To develop them, I have used the following technologies and techniques.",
+  "section2-item4-p3-title": "Python and Pygame.",
+  "section2-item4-p4": "The game is written in Python and uses the Pygame library to handle the graphical interface, keyboard events, sounds, and animations.",
+  "section2-item4-p5-title": "Graphics manipulation.",
+  "section2-item4-p6": "Pygame provides functions to draw graphics on a window, such as creating colored rectangles, animations, and screen updates.",
+  "section2-item4-p7-title": "User events.",
+  "section2-item4-p8": "The game responds to user events, such as mouse clicks and key presses, to allow player interaction.",
+  "section2-item4-p9-title": "Sounds and music.",
+  "section2-item4-p10": "Pygame is used to play sounds and music when the player performs specific actions, such as matching a correct pattern or losing the game.",
+  "section2-item4-p11-title": "Time control.",
+  "section2-item4-p12": "The game uses the time module to manage time, control the speed of animations, and set time limits for certain actions, such as the time before the player is considered to have lost.",
+
+  
+  "section2-item5-h2": "SNAKE",
+  "section2-item5-p": "Repository",
+
+  "section2-item6-h2": "SPACESHIP",
+  "section2-item6-p": "Repository",
+
+  "section2-item7-h2": "PHP",
+  "section2-item7-p1": "The following projects are developed with PHP and MySQL. Below, I summarize some key knowledge acquired in the development of these projects.",
+  "section2-item7-p2-title": "PHP and MySQL.",
+  "section2-item7-p3": " These projects have allowed me to gain experience in creating dynamic web applications, from managing server-side logic to storing and retrieving data in a relational database.",
+  "section2-item7-p4-title": "User interface with Bootstrap.",
+  "section2-item7-p5": " In one of the projects, I used Bootstrap to develop an attractive and user-friendly visual design, which has given me insights into responsive interface development.",
+  "section2-item7-p6-title": "User and data management.",
+  "section2-item7-p7": "Through these applications, I have learned to implement user authentication systems and enable users to perform actions such as adding, editing, and deleting elements, whether they are tasks, images, or products, all stored in a database.",
+  "section2-item7-p8-title": "Transaction processing",
+  "section2-item7-p9": "In the product sales project, I gained knowledge about implementing online purchase systems, managing shopping carts, order confirmation, and tracking the status of transactions.",
+
+  "section2-item8-h2": "TASKS",
+  "section2-item8-p": "Repository",
+
+  "section2-item9-h2": "GALLERY",
+  "section2-item9-p": "Repository",
+
+  "form-label-1": "Email",
+  "form-label-2": "Message",
+  "btn-submit": "Send"
+
+}
