update technologies descriptions

--- a/locales/en.json
+++ b/locales/en.json
@@ -5,24 +5,25 @@
 
   "toogle-button": "Change language",
 
-  "section1-p1": "Experienced developer in a wide range of technologies. From databases like SQL to programming languages such as Python, PHP, and Java, including development with Spring Boot. Additionally, I have experience in front-end tools like HTML5, CSS3, Javascript, and the Angular framework.",
-  "section1-p2": "My education includes a Degree in Early Childhood Education, a Higher Degree Cycle in Network Systems Administration, and a Programming Bootcamp. Although my professional career is in its early stages, I highlight my self-taught approach and my ability to quickly adapt to new technologies.",
-  "section1-p3": "Today, my goal is to contribute my experience to challenging projects and continue learning and improving my skills in the field of software or web development.",
+  "section1-h3-1": "Professional Profile",
+  "section1-p1": "Developer with experience in a wide range of technologies, from managing databases like MySQL, MariaDB, and Oracle (procedures, events, and triggers in PL/SQL) to using languages such as Python, PHP, and Java (Spring Boot). In the front-end field, I have experience with HTML5, CSS3, JavaScript, and the Angular framework.",
+  "section1-p2": "Actually my education includes a degree in Early Childhood Education, a Higher Degree Cycle in Network Systems Administration, and a Programming Bootcamp. Nevertheless, I am committed to continuous learning and stand out for my self-taught approach and quick adaptation to new technologies.",
+  "section1-h3-2": "Skills in Systems Administration",
+  "section1-p3": "In addition to my experience as a developer, I have strong skills in systems administration. I have extensively worked with operating systems like Linux and Windows, performing tasks such as installation, service configuration, permission management, and file system manipulation in both environments. In Windows Server environments, I have experience with Active Directory, managing users, computers, organizational units, groups, permissions, and shared resources (NAS, DFS, Storage Spaces).",
+  "section1-p4": "My experience also includes handling XML, DTD/XSD, XPath, XQuery, and XSLT for XML file manipulation and validation, as well as integrating content from other sources via Atom/RSS. In networking, I have skills in configuring routers, switches (CISCO), subnetting, VLAN management, and handling services like DNS, DHCP, HTTP, FTP, email, and NAS. I also possess skills in cybersecurity, including virtualization (LVM, LXC), encryption, and cryptography (HTTPS certificates).",
+  "section1-h3-3": "Professional Objective",
+  "section1-p5": "I am currently seeking job opportunities that allow me to apply my skills as a developer or systems administrator. I am committed to providing innovative solutions and contributing to the success of technological projects.",
 
   "prev-item-btn": "Back",
   "next-item-btn": "Next",
 
   "section2-item1-h2": "SPRING BOOT & ANGULAR",
-  "section2-item1-p1": "The following two projects share similarities as they are developed in Java using Spring Boot for the backend and Angular or Thymeleaf for the frontend, offering various functionalities and enabling diverse user interactions.",
-  "section2-item1-p2": "These projects have provided the opportunity to acquire and strengthen key skills, such as:",
-  "section2-item1-p3-title": "Spring Boot and security with Spring Security.",
-  "section2-item1-p4": "When developing an application using Spring Boot, I gained experience in creating robust web applications, implementing security with Spring Security to protect resources, and manage user authentication and authorization.",
-  "section2-item1-p5-title": "Project management and data handling.",
-  "section2-item1-p6": "Through these applications, I have learned to design and develop systems for publishing projects, managing donations, adding comments, and handling interactions between users using databases and search techniques implemented with JavaScript and forms.",
-  "section2-item1-p7-title": "Frontend with Angular and Thymeleaf.",
-  "section2-item1-p8": "Using Angular or Thymeleaf in the frontend has provided opportunities to create dynamic and responsive interfaces. With Angular, I have been able to leverage tools like Angular Material and ngx-charts to display data attractively and efficiently, while Thymeleaf has allowed me to generate templates quickly and effectively for the frontend.",
-  "section2-item1-p9-title": "Data manipulation and visualization.",
-  "section2-item1-p10": "Handling data and visualizing it through graphics or tables, using tools like angular-material or ngx-charts, has expanded my knowledge in presenting information effectively and comprehensibly for users.",
+  "section2-item1-p1": "As a developer, I've worked with Spring Boot and Angular to create efficient, high-quality applications, allowing me to acquire specific and valuable skills:",
+  "section2-item1-p2-title": "Spring Boot",
+  "section2-item1-p3": "When developing an application using Spring Boot, I gained experience in creating robust and scalable web applications, leveraging its modular structure and its ability to streamline Java application development.",
+  "section2-item1-p4": "My expertise covers implementing RESTful APIs, integrating databases, and efficiently managing business logic, implementing security with Spring Security to protect resources and manage user authentication and authorization.",
+  "section2-item1-p5-title": "Angular / Thymeleaf",
+  "section2-item1-p6": "Using Angular or Thymeleaf in the frontend has provided opportunities to create dynamic and responsive interfaces. With Angular, I've been able to reuse components and leverage tools like Angular Material and ngx-charts to dynamically, effectively, and attractively display data for users, while Thymeleaf has allowed me to quickly and effectively generate templates for the frontend.",
 
   "section2-item2-h2": "APPMAZING",
   "section2-item2-p1": "Backend Repository",
@@ -32,19 +33,15 @@
   "section2-item3-p": "Repository",
 
   "section2-item4-h2": "PYTHON",
-  "section2-item4-p1": "The following three projects also share similarities as they are all developed with Python's Pygame library and share certain common elements in their structure and functionality.",
-  "section2-item4-p2": "To develop them, I have used the following technologies and techniques.",
-  "section2-item4-p3-title": "Python and Pygame.",
-  "section2-item4-p4": "The game is written in Python and uses the Pygame library to handle the graphical interface, keyboard events, sounds, and animations.",
-  "section2-item4-p5-title": "Graphics manipulation.",
-  "section2-item4-p6": "Pygame provides functions to draw graphics on a window, such as creating colored rectangles, animations, and screen updates.",
-  "section2-item4-p7-title": "User events.",
-  "section2-item4-p8": "The game responds to user events, such as mouse clicks and key presses, to allow player interaction.",
-  "section2-item4-p9-title": "Sounds and music.",
-  "section2-item4-p10": "Pygame is used to play sounds and music when the player performs specific actions, such as matching a correct pattern or losing the game.",
-  "section2-item4-p11-title": "Time control.",
-  "section2-item4-p12": "The game uses the time module to manage time, control the speed of animations, and set time limits for certain actions, such as the time before the player is considered to have lost.",
-
+  "section2-item4-p1": "The following projects share certain common elements in their structure and functionality, as they are all developed using the Python Pygame library. They have allowed me to develop the following techniques.",
+  "section2-item4-p2-title": "Graphics Manipulation",
+  "section2-item4-p3": "Pygame provides functions for drawing graphics on a window, such as creating colored rectangles, animations, and screen updates.",
+  "section2-item4-p4-title": "User Events",
+  "section2-item4-p5": "Games respond to user events, such as mouse clicks and key presses, to enable player interaction.",
+  "section2-item4-p6-title": "Sounds and Music",
+  "section2-item4-p7": "Pygame is used to play sounds and music when the player performs specific actions, such as matching a correct pattern or losing the game.",
+  "section2-item4-p8-title": "Time Control",
+  "section2-item4-p9": "The time module allows managing time, controlling animation speed, and setting time limits for certain actions, such as the time before considering the player to have lost.",
   
   "section2-item5-h2": "SNAKE",
   "section2-item5-p": "Repository",
@@ -52,16 +49,14 @@
   "section2-item6-h2": "SPACESHIP",
   "section2-item6-p": "Repository",
 
-  "section2-item7-h2": "PHP",
-  "section2-item7-p1": "The following projects are developed with PHP and MySQL. Below, I summarize some key knowledge acquired in the development of these projects.",
-  "section2-item7-p2-title": "PHP and MySQL.",
-  "section2-item7-p3": " These projects have allowed me to gain experience in creating dynamic web applications, from managing server-side logic to storing and retrieving data in a relational database.",
-  "section2-item7-p4-title": "User interface with Bootstrap.",
-  "section2-item7-p5": " In one of the projects, I used Bootstrap to develop an attractive and user-friendly visual design, which has given me insights into responsive interface development.",
-  "section2-item7-p6-title": "User and data management.",
-  "section2-item7-p7": "Through these applications, I have learned to implement user authentication systems and enable users to perform actions such as adding, editing, and deleting elements, whether they are tasks, images, or products, all stored in a database.",
-  "section2-item7-p8-title": "Transaction processing",
-  "section2-item7-p9": "In the product sales project, I gained knowledge about implementing online purchase systems, managing shopping carts, order confirmation, and tracking the status of transactions.",
+  "section2-item7-h2": "PHP & MySQL",
+  "section2-item7-p1": "The following projects are developed with PHP and MySQL. Below, I summarize some key insights gained during their development.",
+  "section2-item7-p2-title": "User Interface with Bootstrap",
+  "section2-item7-p3": "In one of the projects, I used Bootstrap to develop an attractive and user-friendly visual design, providing me with insights into responsive interface development.",
+  "section2-item7-p4-title": "User and Data Management",
+  "section2-item7-p5": "I have learned how to implement user authentication systems, as well as allow users to perform actions such as adding, editing and deleting elements in a database.",
+  "section2-item7-p6-title": "Transaction Processing",
+  "section2-item7-p7": "In the product sales project, I gained knowledge in implementing online purchase systems, managing shopping carts, order confirmation, and tracking transaction statuses.",
 
   "section2-item8-h2": "TASKS",
   "section2-item8-p": "Repository",
