add shop application section

--- a/locales/en.json
+++ b/locales/en.json
@@ -47,10 +47,12 @@
   "section2-item7-p5": "I have learned how to implement user authentication systems, as well as allow users to perform actions such as adding, editing and deleting elements in a database.",
   "section2-item7-p6-title": "Transaction Processing",
   "section2-item7-p7": "In the product sales project, I gained knowledge in implementing online purchase systems, managing shopping carts, order confirmation, and tracking transaction statuses.",
-  "section2-item8-h2": "TASKS",
+  "section2-item8-h2": "SHOP",
   "section2-item8-p": "Repository",
-  "section2-item9-h2": "GALLERY",
+  "section2-item9-h2": "TASKS",
   "section2-item9-p": "Repository",
+  "section2-item10-h2": "GALLERY",
+  "section2-item10-p": "Repository",
   "form-label-1": "Email",
   "form-label-2": "Message",
   "btn-submit": "Send"
