--- a/locales/es.json
+++ b/locales/es.json
@@ -47,10 +47,12 @@
   "section2-item7-p5": "He aprendido a implementar sistemas de autenticación de usuarios, así como a permitirles realizar acciones como agregar, editar y eliminar elementos en una base de datos.",
   "section2-item7-p6-title": "Procesamiento de transacciones.",
   "section2-item7-p7": " En el proyecto de venta de productos, adquirí conocimientos sobre la implementación de sistemas de compra en línea, gestión de carritos de compra, confirmación de pedidos y seguimiento del estado de las transacciones.",
-  "section2-item8-h2": "TASKS",
+  "section2-item8-h2": "SHOP",
   "section2-item8-p": "Repositorio",
-  "section2-item9-h2": "GALLERY",
+  "section2-item9-h2": "TASKS",
   "section2-item9-p": "Repositorio",
+  "section2-item10-h2": "GALLERY",
+  "section2-item10-p": "Repositorio",
   "form-label-1": "Correo electrónico",
   "form-label-2": "Mensaje",
   "btn-submit": "Enviar"
